--- a/HotOffTheNumberPad/mobile/src/main/res/values/strings.xml
+++ b/HotOffTheNumberPad/mobile/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">HotOffTheNumberPad</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
+    <string name="app_name">Hot Off The Dialer</string>
+    <string name="open_contacts">Open Contacts</string>
+    <string name="recent_contacts">Recent Contacts</string>
 
 </resources>
