--- a/HotOffTheNumberPad/wear/src/main/res/values/strings.xml
+++ b/HotOffTheNumberPad/wear/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">HotOffTheNumberPad</string>
+    <string name="app_name">HotOffTheDialer</string>
 </resources>
