--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -3,6 +3,6 @@
 
     <string name="app_name">Hot Off The Dialer</string>
     <string name="open_contacts">Open Contacts</string>
-    <string name="recent_contacts">Recent Contacts</string>
+    <string name="recent_contacts">Recently Added Contacts</string>
 
 </resources>
